tests/ui/generic-associated-types/issue-79422.base.stderr
error[E0107]: missing generics for associated type `MapLike::VRefCont`
  --> $DIR/issue-79422.rs:47:36
   |
LL |         as Box<dyn MapLike<u8, u8, VRefCont = dyn RefCont<'_, u8>>>;
   |                                    ^^^^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-79422.rs:23:10
   |
LL |     type VRefCont<'a>: RefCont<'a, V> where Self: 'a;
   |          ^^^^^^^^ --
help: add missing lifetime argument
   |
LL |         as Box<dyn MapLike<u8, u8, VRefCont<'a> = dyn RefCont<'_, u8>>>;
   |                                            ++++

error[E0038]: the trait `MapLike` cannot be made into an object
  --> $DIR/issue-79422.rs:47:12
   |
LL |         as Box<dyn MapLike<u8, u8, VRefCont = dyn RefCont<'_, u8>>>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MapLike` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-79422.rs:23:10
   |
LL | trait MapLike<K, V> {
   |       ------- this trait cannot be made into an object...
LL |     type VRefCont<'a>: RefCont<'a, V> where Self: 'a;
   |          ^^^^^^^^ ...because it contains the generic associated type `VRefCont`
   = help: consider moving `VRefCont` to another trait
   = help: the following types implement the trait, consider defining an enum where each variant holds one of these types, implementing `MapLike` for this new enum and using it instead:
             std::collections::BTreeMap<K, V>
             Source

error[E0038]: the trait `MapLike` cannot be made into an object
  --> $DIR/issue-79422.rs:44:13
   |
LL |     let m = Box::new(std::collections::BTreeMap::<u8, u8>::new())
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MapLike` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-79422.rs:23:10
   |
LL | trait MapLike<K, V> {
   |       ------- this trait cannot be made into an object...
LL |     type VRefCont<'a>: RefCont<'a, V> where Self: 'a;
   |          ^^^^^^^^ ...because it contains the generic associated type `VRefCont`
   = help: consider moving `VRefCont` to another trait
   = help: the following types implement the trait, consider defining an enum where each variant holds one of these types, implementing `MapLike` for this new enum and using it instead:
             std::collections::BTreeMap<K, V>
             Source
   = note: required for the cast from `Box<BTreeMap<u8, u8>>` to `Box<dyn MapLike<u8, u8, VRefCont<'_> = (dyn RefCont<'_, u8> + 'static)>>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0038, E0107.
For more information about an error, try `rustc --explain E0038`.
